--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="lib" path="lib/slf4j-api.jar"/>
 	<classpathentry kind="lib" path="lib/jinput.jar"/>
 	<classpathentry kind="lib" path="lib/lwjgl_util.jar"/>
-	<classpathentry kind="lib" path="lib/lwjgl.jar" sourcepath="lib/lwjgl-source-2.7.1.zip"/>
+	<classpathentry kind="lib" path="lib/lwjgl-2.7.1.zip" sourcepath="lib/lwjgl-source-2.7.1.zip"/>
 	<classpathentry kind="lib" path="lib/bcprov-jdk16-145.jar"/>
 	<classpathentry kind="lib" path="lib/asm-all-5.0_ALPHA.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
@@ -18,8 +18,9 @@
 	<classpathentry kind="lib" path="lib/jdom-2.0.5.jar"/>
 	<classpathentry kind="lib" path="lib/jide-oss-3.4.3.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="lib/lwjgl-source-2.9.0.zip"/>
+	<classpathentry kind="lib" path="lib/lwjgl-source-2.7.1.zip"/>
 	<classpathentry kind="lib" path="lib/lzma.jar"/>
 	<classpathentry kind="lib" path="lib/xuggle-xuggler-noarch-5.4.jar"/>
+	<classpathentry kind="lib" path="lib/lwjgl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
